[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.duc@heig-vd.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
lazy_static = "1.4"
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
sys = "0.0.0"
sanitizer = "0.1.6"
chrono = "0.4.23"
argon2 = "0.4.1"
rand = "0.8.5"
